Fix overflow issues caused by Navbar dropdown.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,15 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities{
-    .upload-file-input:hover input{
-        cursor: pointer;
-    }
+@layer base {
+  body.dropdown-open {
+    @apply overflow-hidden;
+  }
+  body.dropdown-closing {
+    @apply overflow-hidden !important; /* Note: !important here for precedence */
+  }
+}
 
-    @screen custom-minwidth-400 {
-        .custom-grid-col2-400-min{
-            @apply grid-cols-2
-        }
-    }
 
+/* Utilities layer: Specific overrides */
+@layer utilities {
+
+  .upload-file-input:hover input {
+    cursor: pointer;
+  }
+
+  @screen custom-minwidth-400 {
+    .custom-grid-col2-400-min {
+      @apply grid-cols-2;
+    }
+  }
 }
